syntax = "proto3";

package proto;

option go_package = "english-ai-full/quanqr/proto_qr/account";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Account {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string avatar = 5;
  string role = 6;
  int64 owner_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message AccountListResponse {
  repeated Account data = 1;
  string message = 2;
}

message AccountResponse {
  Account data = 1;
  string message = 2;
}

message CreateEmployeeAccountRequest {
  string name = 1;
  string email = 2;
  optional string avatar = 3;
  string password = 4;
  string confirm_password = 5;
}

message UpdateEmployeeAccountRequest {
  string name = 1;
  string email = 2;
  optional string avatar = 3;
  optional bool change_password = 4;
  optional string password = 5;
  optional string confirm_password = 6;
}

message UpdateMeRequest {
  string name = 1;
  optional string avatar = 2;
}

message ChangePasswordRequest {
  string old_password = 1;
  string password = 2;
  string confirm_password = 3;
}

message AccountIdParam {
  int64 id = 1;
}

message Guest {
  int64 id = 1;
  string name = 2;
  optional int32 table_number = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message GetListGuestsResponse {
  repeated Guest data = 1;
  string message = 2;
}

message GetGuestListQueryParams {
  optional google.protobuf.Timestamp from_date = 1;
  optional google.protobuf.Timestamp to_date = 2;
}

message CreateGuestRequest {
  string name = 1;
  int32 table_number = 2;
}

message CreateGuestResponse {
  string message = 1;
  Guest data = 2;
}

service AccountService {
  rpc GetAccountList(google.protobuf.Empty) returns (AccountListResponse);
  rpc CreateEmployeeAccount(CreateEmployeeAccountRequest) returns (AccountResponse);
  rpc GetEmployeeAccount(AccountIdParam) returns (AccountResponse);
  rpc UpdateEmployeeAccount(UpdateEmployeeAccountRequest) returns (AccountResponse);
  rpc DeleteEmployeeAccount(AccountIdParam) returns (AccountResponse);
  rpc GetMe(google.protobuf.Empty) returns (AccountResponse);
  rpc UpdateMe(UpdateMeRequest) returns (AccountResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (AccountResponse);
  rpc CreateGuest(CreateGuestRequest) returns (CreateGuestResponse);
  rpc GetGuestList(GetGuestListQueryParams) returns (GetListGuestsResponse);
}